# deep-qa-generation

./: .gitignore  README.md  document_knowledge_compiler_qa_builder_requirements.md  main.py  orjson.py  pydantic.py  pyproject.toml  requirements.txt  simple_yaml.py  tenacity.py
configs/: default.yaml
output/: document_structure.json  documents.json
rag_qa_builder/: cli.py  config.py  deep_qa_pipeline.py  models.py  pipeline.py
rag_qa_builder/analyzer/: difficulty_estimator.py  fact_combination_analyzer.py  pattern_matcher.py
rag_qa_builder/compiler/: concept_canonicalizer.py  concept_extractor.py  evidence_binder.py  fact_extractor.py  section_knowledge_extractor.py  semantic_sectioner.py  structure_mapper.py
rag_qa_builder/exporters/: json_exporter.py  jsonl_exporter.py
rag_qa_builder/generator/: answer_generator.py  qa_generator.py  question_blueprint_generator.py
rag_qa_builder/graph/: concept_fact_graph.py  graph_builder.py
rag_qa_builder/llm/: base.py  openai_client.py  prompt_runner.py
rag_qa_builder/readers/: __init__.py  markdown_reader.py  text_reader.py
rag_qa_builder/utils/: ids.py  json_utils.py  text_utils.py
rag_qa_builder/validator/: __init__.py  ambiguity_checker.py  answerability_checker.py  duplicate_checker.py  evidence_checker.py  hallucination_checker.py
rich/: __init__.py  console.py
tests/: test_pipeline.py  test_readers.py  test_structure_mapper.py
tests/fixtures/: sample.md  sample.txt
