[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-qa-builder"
version = "0.1.0"
description = "Document knowledge compiler and QA benchmark builder"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "orjson>=3.9.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0",
  "tenacity>=8.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
rag-qa-builder = "rag_qa_builder.cli:app"

[tool.setuptools.packages.find]
include = ["rag_qa_builder*"]

